# LearningGrapQL

./: README.md  manage.py  pyproject.toml
apps/cards/: schema.py
apps/cards/migrations/: 0001_initial.py
apps/decks/: admin.py  apps.py  schema.py
apps/decks/migrations/: 0001_initial.py
apps/schema/: schema.py
apps/users/: admin.py  models.py
apps/users/migrations/: 0001_initial.py
config/: asgi.py  settings.py  urls.py  wsgi.py
graphQL/: asgi.py  settings.py  urls.py  wsgi.py
